UI: Force custom scrollbars on all platforms - fixes #293
(integrated from master branch change 9.2.1-1480-g1fd232f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/_scrollbars.less
+++ b/src/chrome/komodo/skin/global/_scrollbars.less
@@ -78,3 +78,25 @@ dialog, :root.dialog, :root.pref-window
 {
     background: @contrast-special;
 }
+
+/* Scintilla */
+
+@media all and (-moz-overlay-scrollbars)
+{
+    scintilla[virtualScrollbars="true"]
+    {
+        embed[anonid="scimoz"] {
+            margin-right: 16px;
+        }
+        
+        &[wrapped="false"] embed[anonid="scimoz"]
+        {
+            margin-bottom: 16px;
+        }
+        
+        &[wrapped="true"] row > scrollbar[orient="horizontal"]
+        {
+            visibility: collapse !important;
+        }
+    }
+}
